# v8-profiler-rs

./: .eslintignore  .eslintrc.js  .gitattributes  .gitignore  Cargo.toml  Dockerfile  HeapSnapshotLoader.js  Makefile  README.md  README_Zh.md  deploy.sh  index.d.ts  index.html  index.js  memoryleak.js  package-backup.json  package.json  pnpm-lock.yaml  profile.js  s.yaml  simple-test.js  snapshot.js  tsconfig.json  v8.heapsnapshot  v8.heapsnapshot.js
.github/workflows/: CI.yml  ci.yml
benchmark/: bench.ts
binary/aarch64-apple-darwin/: v8-parse
binary/x86_64-apple-darwin/: v8-parse
example/: bootstrap.js  config.ts  f.yml  package.json  snapshot.js  tailwind.config.js  tsconfig.json
example/pkg/: package.json  v8_profiler_rs.d.ts  v8_profiler_rs.js  v8_profiler_rs_bg.wasm  v8_profiler_rs_bg.wasm.d.ts
example/public/: worker.js
example/src/: configuration.ts
example/web/: analyze.ts  common.less  tsconfig.json  type.ts  utils.ts
memoryleak-demo/bigData/: bigData.heapsnapshot  index.js
memoryleak-demo/closure/: index.js
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
scripts/: deploy.ts  publish.ts
src/: build.rs  define.rs  lib.rs  main.rs  snap_back.rs  snapshot.rs  variable.rs
(+22 files in other folders)
